syntax = "proto3";
package todo;

message Empty {}

message AddRequest {
    string item = 1;
}

message ListResponse {
    repeated string list = 1;
}

service TodoList {
    rpc Add(AddRequest) returns (Empty);
    rpc List(Empty) returns (ListResponse);
}
